<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/keypad"
	android:orientation="vertical" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:stretchColumns="*" >
	
	<TableRow>
		<Button 
		    android:id="@+id/keypad_1" 
		    android:text="@string/one" >
		</Button>
		<Button 
		    android:id="@+id/keypad_2" 
		    android:text="@string/two" >
		</Button>
		<Button 
		    android:id="@+id/keypad_3" 
		    android:text="@string/three" >
      	</Button>
	</TableRow>

	<TableRow>
		<Button 
		    android:id="@+id/keypad_4" 
		    android:text="@string/four" >
		</Button>
		<Button 
		    android:id="@+id/keypad_5" 
		    android:text="@string/five" >
		</Button>
		<Button 
		    android:id="@+id/keypad_6" 
		    android:text="@string/six" >
      	</Button>
	</TableRow>
	<TableRow>
		<Button 
		    android:id="@+id/keypad_7" 
		    android:text="@string/seven" >
		</Button>
		<Button 
		    android:id="@+id/keypad_8" 
		    android:text="@string/eight" >
		</Button>
		<Button 
		    android:id="@+id/keypad_9" 
		    android:text="@string/nine" >
      	</Button>
	</TableRow>
	
</TableLayout>
