<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@color/background" 
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal" >
	<LinearLayout
		android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center" > 
		<TextView
			android:text="@string/main_title" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:layout_gravity="center" 
			android:layout_marginBottom="5dip"  
			android:textSize="18sp" 
			android:textColor="@color/text_menu"
			android:textStyle="bold"/>
		<TextView
			android:text="@string/main_subtitle" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:layout_gravity="center" 
			android:layout_marginBottom="25dip" 
			android:textSize="26sp" 
			android:textColor="@color/text_menu"
			android:textStyle="bold"/>
		<Button
		    android:id="@+id/continue_button" 
			style="@style/button_text"
			android:background="@drawable/styled_button"
			android:text="@string/continue_label" />
		<Button
		    android:id="@+id/new_button" 
	  	  	style="@style/button_text"
	  	  	android:background="@drawable/styled_button"
	  	  	android:text="@string/new_game_label"/>
		<Button 
		    android:id="@+id/about_button"
		    style="@style/button_text" 
		    android:background="@drawable/styled_button"
		    android:text="@string/about_label" />
		<Button 
		    android:id="@+id/exit_button"
		    style="@style/button_text"
		    android:background="@drawable/styled_button"
	  	  	android:text="@string/exit_label" />
	</LinearLayout>
</LinearLayout>